--- a/src/components/header/Navigation.module.css
+++ b/src/components/header/Navigation.module.css
@@ -12,19 +12,13 @@ li {
   flex-wrap: wrap;
   list-style: none;
   max-width: 75vw;
-  gap: 5vw;
+  gap: 3vw;
+  padding-left: 0;
 }
 .menuList > * {
   font-family: 'Jost', sans-serif;
-  text-transform: lowercase;
   letter-spacing: 2px;
   font-weight: 700;
-}
-.menuList > *:nth-child(odd) {
-  margin-top: 0.8rem;
-}
-.menuList > *:nth-child(even) {
-  margin-bottom: 0.8rem;
 }
 .menuList > *,
 .menuList > *:link,
@@ -35,7 +29,8 @@ li {
   display: inline-block;
   border-radius: 5px;
   text-decoration: none;
-  border: 2px solid #2877b4cf;
+  border: 2px solid transparent;
+  border-bottom: 2px solid #2877b4cf;
   padding: 3px 10px; 
   transition: all .2s;
 }
@@ -55,23 +50,21 @@ li {
 .dropdown {
   position: relative;
   display: inline-block;
+  cursor: unset;
 }
 .dropdownContent {
   display: none;
-  flex-direction: row;
-  transform: translate(250px, -50px);
+  flex-direction: column;
+  transform: translate(70px, -35px);
   position: absolute;
-  right: 0;
   background-color: #f9f9f9;
   border-radius: 5px;
-  min-width: 160px;
+  max-height: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
 .dropdownContent a {
   color: black;
-  padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
@@ -84,13 +77,14 @@ li {
   font-weight: 700;
   background-color: transparent;
   border: none;
-  cursor: pointer;
+  cursor: unset;
 }
 
-.dropdownContent a:hover {background-color: #f1f1f1;}
+.dropdownContent a:hover {
+  text-decoration: underline;
+  border-radius: 3px;}
 .dropdownContent a:active {
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
-  transform: translateY(0px);
 }
-.dropdown:hover .dropdownContent {display: flex;}
+.dropdownShow {display: flex;}
 .dropdown:hover .dropbtn {color: white;}
