--- a/src/components/members-card/mebersCard.css
+++ b/src/components/members-card/mebersCard.css
@@ -1,14 +1,15 @@
 .about-page{
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: aliceblue;
 }
 .about-page-container{
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   width: 100%;
   max-width: 1300px;
+  align-items: center;
   height: 80%;
   max-height: 900px;
   margin: 0 auto;
@@ -29,7 +30,7 @@
   max-width: 900px;
   background-color: rgb(251, 253, 252);
   border-radius: 5px;
-  margin: 15px auto 15px auto;
+  margin-bottom: 15px;
   -webkit-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
   -moz-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
   box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
