--- a/src/components/for-game/GameModal.module.css
+++ b/src/components/for-game/GameModal.module.css
@@ -4,7 +4,8 @@
   align-items: center;
   width:100vw;
   height: 100vh;
-  background-color: rgba(63, 62, 62, 0.473);
+  background-color: rgba(117, 121, 119, 0.226);
+  opacity: 0.8;
 }
 
 .littleModal {
@@ -14,7 +15,7 @@
   align-items: center;
   width:500px;
   height: 300px;
-  background-color: azure;
+  background-color: rgb(185, 193, 212);
   border-radius: 5px;
 }
 .modalTitle {
@@ -32,10 +33,26 @@
   margin-bottom: 15px;
 }
 .modalTitle{
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 .buttonList{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 90%;
+  height: 65px;
+  margin-top: 20px;
+}
+.categoryButton{
+  width: 60px;
   height: 60px;
-  background-color: aqua;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.25em;
+  font-weight: 600;
+  color: var(--text-color);
+  background-color: rgb(62, 180, 137);
+  -webkit-box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
+-moz-box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
+box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
 }
