--- a/src/components/game/modal/GameModal.module.css
+++ b/src/components/game/modal/GameModal.module.css
@@ -53,6 +53,16 @@
   color: var(--text-color);
   background-color: rgb(62, 180, 137);
   -webkit-box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
--moz-box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
-box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
+  -moz-box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
+  box-shadow: 0px 1px 7px 7px rgba(13, 199, 133, 0.2);
+}
+.categoryButton:hover {
+  background-color: rgb(135, 175, 160);
+  cursor: pointer;
+}
+.categoryButton:active {
+  transform: scale(0.9);
+  background-color: rgb(135, 175, 160);
+  cursor: pointer;
+  border: 1px solid green ;
 }
