--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -23,6 +23,15 @@
   height: 100%;
   object-fit:cover
 }
+.gameInfo{
+  display:flex;
+  flex-direction: row-reverse;
+  justify-content:space-between;
+  align-items:center;
+  width:60%;
+  max-width: 600px;
+  margin: 0 auto;
+}
 .sprintGameTimer {
   display: flex;
   justify-content: flex-start;
@@ -37,7 +46,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  margin: auto;
+  margin: 0 25px 0 25px;
   font-size: 1.75em;
   font-weight: 600;
   color: var(--text-color);;
