--- a/src/components/auth/Auth.module.css
+++ b/src/components/auth/Auth.module.css
@@ -1,4 +1,5 @@
-.wrapper {
+.wrapper,
+.wrapper_msg {
   margin: auto;
   background-color: var(--main-color);
 
@@ -7,6 +8,23 @@
   width: 290px;
   overflow: hidden;
   border-radius: 14px;
+  box-shadow: #00b637;
+  box-shadow: 5px 7px 17px 0px blue;
+  z-index: 3;
+}
+
+.wrapper_msg {
+  width: 100%;
+  padding: 0px;
+  border-radius: 0px;
+  font-size: 1.2rem;
+  /* padding-bottom: 10px; */
+
+  transition: background-color 0.4s ease;
+}
+
+.wrapper_msg a {
+  display: block;
 }
 
 .title {
@@ -36,7 +54,8 @@
 }
 
 .btn,
-.btnSwitch {
+.btnSwitch,
+.confirm_btn {
   min-width: 100px;
   border-radius: 14px;
   padding: 4px 8px;
@@ -49,7 +68,8 @@
 }
 
 .btn:hover,
-.btnSwitch:hover {
+.btnSwitch:hover,
+.confirm_btn:hover {
   filter: brightness(115%);
   transform: translatey(-2px);
 }
@@ -68,3 +88,10 @@ p {
   font-size: 1.1rem;
   font-weight: 600;
 }
+
+.confirm_btn {
+  max-width: 290px;
+  margin: 15px auto
+}
+
+
