--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -137,6 +137,7 @@
   color:  rgb(252, 57, 57);;
 }
 .gameStatContainer {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -156,14 +157,17 @@
 .gameStatCard{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 45px;
   margin: 10px 0 15px 0;
   border-radius: 5px;
+  font-size: 1em;
+  font-weight: 600;
+  text-align: justify;
   color: var(--text-color);
-  background-color: aliceblue;
+  background-color: rgb(251, 253, 252);
   -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
   -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
   box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
@@ -181,7 +185,7 @@
   background-color: rgba(240, 151, 151, 0.507);
   font-size: 1.25em;
   font-weight: 600;
-  color: var(--text-color);;
+  color: var(--text-color);
 } 
 .soundImage{
   width:45px;
@@ -199,4 +203,27 @@ object-fit: cover;
 .soundImage:active .sound{
   transform: scale(0.95) rotate(-10deg);
   cursor: pointer;
+}
+.gameStatCardWord{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: justify;
+}
+.checked,
+.position{
+  width:5%;
+}
+.audio{
+  width:15%;
+}
+.transcription{
+  width: 20%;
+}
+.currentWord{
+  width: 25%;
+}
+.translate{
+  width: 30%;
 }
