--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,24 @@
   text-align: center;
 }
 
+.container {
+  max-width: 1140px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: auto;
+}
+
+.hidden {
+  visibility: hidden;
+  height: 0px;
+  width: 0px;
+  font-size: 0px;
+}
+
 .auth-container {
   align-self: center;
+}
+
+.audio-challenge {
+  background-color: aliceblue;
 }
