--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -45,6 +45,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align:center;
   width: 100%;
   height: 100%;
   margin: 0 25px 0 25px;
@@ -176,16 +177,20 @@
 }
 .messageText{
   display: block;
-  width: 50%;
+  width: 75%;;
   height: 100%;
   align-items: center;
   text-align: center;
-  margin: auto;
-  border: 2px solid rgba(241, 113, 113, 0.479);
-  background-color: rgba(240, 151, 151, 0.507);
+  margin: 25px 0 0 0;
+  border-radius: 5px;
+  /* border: 2px solid rgba(241, 113, 113, 0.479);*/
+  background-color: rgb(251, 253, 252);
   font-size: 1.25em;
   font-weight: 600;
-  color: var(--text-color);
+  color:  rgba(214, 68, 68, 0.507);
+  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
+  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
+  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
 } 
 .soundImage{
   width:45px;
