--- a/src/components/dictionary/WordCard.module.css
+++ b/src/components/dictionary/WordCard.module.css
@@ -1,6 +1,3 @@
-p {
-  color: black;
-}
 .card {
   position: relative;
   perspective: 150rem;
@@ -15,6 +12,7 @@ p {
   height: 12rem;
   width: 30rem;
   gap: 10px;
+  color: black;
   border-radius: 10px;
   padding: 1rem;
   display: flex;
@@ -30,11 +28,19 @@ p {
   backface-visibility: hidden;
 }
 .card__side_front {
-  background-color: #e959a1a8;
+  background-color: #db88b1a8;
+  color: black;
 }
 .card__side_back {
-  background-color: #0288ee9a;
+  color: black;
+  background-color: #0288ee62;
   transform: rotateY(180deg);
+}
+.hardWord {
+  background-color: rgb(253, 191, 154);
+}
+.learnedWord {
+  background-color: rgb(188, 250, 186);
 }
 .card:hover .card__side_front {
   transform: rotateY(180deg);
