feat: move css-classes to index.css

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* color: var(--text-color); */
+  background-color: aliceblue;
 }
 
 * {
@@ -33,3 +34,21 @@ a {
   text-decoration: none;
   /* color: var(--text-color); */
 }
+
+.container {
+  max-width: 1140px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: auto;
+}
+
+.hidden {
+  visibility: hidden;
+  height: 0px;
+  width: 0px;
+  font-size: 0px;
+}
+
+/* .audiogame-page { */
+/* background-color: aliceblue; */
+/* } */
