--- a/src/components/dictionary/WordsBunch.module.css
+++ b/src/components/dictionary/WordsBunch.module.css
@@ -10,3 +10,17 @@
   border-radius: 10px;
   background-color: antiquewhite;
 }
+.pagination {
+  background-color: antiquewhite;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0 auto;
+  width: 80vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.pagination a {
+  display: block;
+  border-bottom: 2px solid transparent;
+}
