fix: add unique key to wordCards

--- a/src/components/dictionary/WordCard.module.css
+++ b/src/components/dictionary/WordCard.module.css
@@ -46,6 +46,17 @@
   padding: 5px 10px; 
   border: 1px solid #333;
 }
+.rotate:active {
+  content: attr(data-title);
+  position: absolute; 
+  left: 20%; top: 30%; 
+  z-index: 1; 
+  background: rgba(255,255,230,0.9); 
+  font-family: Arial, sans-serif;
+  font-size: 11px; 
+  padding: 5px 10px; 
+  border: 1px solid #333;
+}
 .card__side_front {
   background-color: #db88b1a8;
   color: black;
