--- a/src/components/game/audio-game/Audiogame.module.css
+++ b/src/components/game/audio-game/Audiogame.module.css
@@ -8,7 +8,7 @@
 .wrapper {
   display: flex;
   justify-content: center;
-  height: 100%;
+  /* height: 100%; */
   flex-wrap: wrap;
   align-content: flex-start;
   /* position: relative; */
@@ -17,7 +17,7 @@
 .counter {
   flex: 0 0 100%;
   width: 100px;
-  height: 100px;
+  height: 50px;
   text-align: center;
   padding-top: 20px;
   /* position: absolute; */
@@ -75,13 +75,20 @@
   visibility: hidden;
 }
 
-.answers {
-  /* width: 70vw; */
+.controls {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.answers {
+  display: flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 80px;
   font-size: 1.5rem;
+  flex: 1 0 95%;
+  /* gap: 0px 10px; */
 }
 
 .answersItem {
