--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -1,59 +1,94 @@
 .printChallengePage{
   position: relative;
-  background-color: aliceblue;
+  width: 100vw;
+  height:1080px;
+  background-color: #F5F5F5;
 }
-.sprintGameFieldWherePlaying {
-  position: relative;
+.printChallengePageContainer{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 550px;
-  max-width: 500px;
-  height: 550px;
-  max-height: 500px;
-  border-radius: 5px;
-  margin: auto;
-  overflow: hidden;
-  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-}
-.sprintGameFieldWherePlayingBackground {
   width: 100%;
+  max-width: 1280px;
   height: 100%;
-  object-fit:cover
+  margin: 0 auto;
+}
+.sprintGameTitle{
+font-style: normal;
+font-weight: 700;
+font-size: 22px;
+line-height: 33px;
+letter-spacing: 0.1em;
+text-transform: uppercase;
+color: #0058C9;
+margin: 122px auto 46px auto;
 }
 .gameInfo{
   display:flex;
   flex-direction: row-reverse;
   justify-content:space-between;
   align-items:center;
-  width:60%;
-  max-width: 600px;
-  margin: 0 auto;
+  width: 300px;
+  margin: 0 auto 16px auto;
 }
-.sprintGameTimer {
+.sprintGameTimer,
+.sprintGameScore {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  background-color: aliceblue;
 }
 .sprintGameTimerContent {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   text-align:center;
   width: 100%;
   height: 100%;
-  margin: 0 25px 0 25px;
-  font-size: 1.75em;
-  font-weight: 600;
-  color: var(--text-color);;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 0.75em;
+  line-height: 10px;
+  letter-spacing: 0.1em;
+  color: #0058C9;
 }
-.sprintGameTimerTikTak {
+.sprintGameScoreContent {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  text-align:center;
+  width: 100%;
+  height: 100%;
+  font-size: 0.75em;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 10px;
+  letter-spacing: 0.1em;
+  color: #069706;;
+}
+.sprintGameFieldWherePlaying {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+  border: 1px solid #0058C9;
+  border-radius: 5px;
+  overflow: hidden;
+  /* -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
+  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
+  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2); */
+} 
+/* .sprintGameFieldWherePlayingBackground {
+  width: 100%;
+  height: 100%;
+  object-fit:cover
+} */
+
+/* .sprintGameTimerTikTak {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,7 +103,7 @@
   -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2) inset;
   -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2) inset;
   box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2) inset;
-}
+} */
 .fieldForGame{
   position: absolute;
   top: 0;
@@ -79,63 +114,80 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(70, 69, 69, 0.548);
   z-index: 1000;
 }
 .engWordField,
-.translateEngWordField,
-.sprintButtonBlock {
+.translateEngWordField {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 50%;
   height: 50px;
   border-radius: 5px;
-  margin: 25px 0 15px 0;
-  font-size: 2em;
+  font-size: 22px;
   font-weight: 600;
-  color:beige;
+  color: #000000;
+}
+.line{
+  width: 140px;
+  height: 1px;
+  background-color: #000000 ;
+  margin: 30px 0 30px 0;
 }
 .sprintButtonBlock {
   width: 80%;
-  justify-content: space-around;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 300px;
+  height: 50px;
+  border-radius: 5px;
+  margin: 30px 0 15px 0;
+  font-size: 1.25em;
+  font-weight: 600;
+  color:#F5F5F5;
 }
 .falseButton,
 .truthButton{
-  width: 150px;
+  width: 130px;
   height: 45px;
   border: none;
   border-radius: 5px;
-  background-color: inherit;
-  background-color: rgba(71, 70, 70, 0.534);
   font-size: 0.75em;
   font-weight: 600;
-  color:beige;
-  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
+  color: #F5F5F5;
+  /* -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
   -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
+  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2); */
+}
+.falseButton {
+background-color: #C80707;
+}
+.truthButton{
+  background-color: #069706;
 }
 .truthButton:hover {
-  background-color: rgba(54, 240, 101, 0.596);
+  background-color: #035e03;
   cursor: pointer;
 }
 .truthButton:active {
   transform: scale(0.95);
   background-color: inherit;
   cursor: pointer;
-  border: 1px solid green ;
+  border: 1px solid #069706; ;
   color:  green;
 }
 .falseButton:hover {
-  background-color: rgb(250, 137, 137);
+  background-color: #8a0404;
   cursor: pointer;
 }
 .falseButton:active {
   transform: scale(0.95);
   background-color: inherit;
   cursor: pointer;
-  border: 1px solid rgb(252, 57, 57);
-  color:  rgb(252, 57, 57);;
+  border: 1px solid #C80707;
+  color: #C80707;
 }
 .gameStatContainer {
   position: relative;
