--- a/src/components/members-card/mebersCard.css
+++ b/src/components/members-card/mebersCard.css
@@ -1,51 +1,65 @@
 .about-page{
   width: 100vw;
-  height: 100vh;
-  background-color: aliceblue;
+  height: 1080px;
+  background-color: #F5F5F5;;
 }
 .about-page-container{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   width: 100%;
-  max-width: 1300px;
-  height: 80%;
-  max-height: 900px;
+  max-width: 1280px;
+  height: 1080px;
   margin: 0 auto;
-  padding-top: 32px;
+  /* padding-top: 32px; */
 }
+
 .about-page-title{
   display: block;
   width: auto;
-  text-align: center;
-  margin: 15px auto 15px auto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #0058C9;
+  margin: 134px auto 60px auto;
+}
+.member-card-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 .card{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: flex-start;
-  width: 60%;
-  max-width: 900px;
-  background-color: rgb(251, 253, 252);
-  border-radius: 5px;
-  margin: 15px auto 15px auto;
-  -webkit-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
+  width: 300px;
+  height: 400px;
+  background-color: transparent;
+  border: 1px solid #0058C9;
+  border-radius: 6px;
+  /* margin: 15px auto 15px auto; */
+  /* -webkit-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
   -moz-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
-  box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
+  box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2); */
+}
+.card:nth-child(2){
+  margin-left: 40px;
+  margin-right: 40px;
 }
 .member-card-image-container {
   display:flex;
-  float: left;
   justify-content: center;
   align-items: center;
-  width: 34%;
-  max-width: 250px;
-  height: 100%;
-  border-radius: 5px;
-  border-radius: 5px;
+  width: 100%;
+  height: 230px;
   overflow:hidden;
-  margin: auto 0;
+  margin-bottom: 20px;
 }
 .member-image{
   width: 100%;
@@ -55,22 +69,45 @@
 .about-member-container{
   position: relative;
   display: flex;
-  width: 60%;
-  height: 100%;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  width: 100%;
   text-align: justify;
-  padding-left: 10px;
-  padding-right: 10px;
+  margin: 0 auto;
+}
+.member-name{
+  width: 165px;
+  height: 33px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 33px;
+  text-transform: capitalize;
+  color: #000000;
+  margin-left: 20.13px;
+  margin-bottom: 3px;
+}
+.member-role {
+  width: 215px;
+  height: 24px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
+  text-transform: capitalize;
+  color: #000000;
+  margin-left: 20.13px;
+  margin-bottom: 24px;
 }
 .logo-container{
   right: 5px;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   overflow: hidden;
   border-radius: 50%;
-  margin: 5px auto 5px auto
+  margin: 5px auto 15px auto
 }
 .logo-container:hover{
   transform: scale(1.05);
@@ -82,7 +119,7 @@
   transition: ease-in-out 1s;
   background-color: rgb(195, 252, 207);
 }
-.logo-link{
+.git-logo-link{
   display: block;
   width: 100%;
   height: 100%;
@@ -91,22 +128,13 @@
   display: block;
   width: 100%;
   height: 100%;
-  transform: scale(1.15);
 }
-.rss-logo{
-  margin-top: -0.5px;
-  margin-left: -3px;
-}
-.member-info{
-  margin-top: 10px;
-  margin-bottom: 10px;
-  color: rgb(51, 47, 47);
-}
+
 .logo-block{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   width: 50px;
-  margin-top: 0px;
+  margin: 0 auto 0 auto;
 }
