--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,20 @@
   --text-color: #410002;
   --tetriary-color: #7a4f7d;
   --border-color: rgb(0, 88, 201);
-  --color-bg: #F5F5F5;
+  --color-bg: #f5f5f5;
+  /* 200: 'Nunito-ExtraLight'; */
+  /* 300: 'Nunito-Light'; */
+  /* 400: 'Nunito-Regular'; */
+  /* 500: 'Nunito-Medium'; */
+  /* 600: 'Nunito-SemiBold'; */
+  /* 700: 'Nunito-Bold'; */
+  /* 800: 'Nunito-ExtraBold'; */
+  /* 900: 'Nunito-Black'; */
 }
 
 body {
-  font-family: 'Nunito-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Nunito-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* color: var(--text-color); */
@@ -21,7 +29,7 @@ body {
 * {
   margin: 0px;
   padding: 0px;
-  
+  box-sizing: border-box;
 }
 
 #root {
@@ -44,5 +52,5 @@ a {
   max-width: 1280px;
   padding-left: 40px;
   padding-right: 40px;
-  margin: 0 auto
+  margin: 0 auto;
 }
