--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -9,8 +9,17 @@
   font-style: normal;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding-top: 20px;
   padding-bottom: 27px;
+}
+
+.footer-logo {
+  width: 200px;
+}
+
+.footer-logo svg {
+  width: 100%;
 }
 
 .nav-menu-item {
@@ -48,4 +57,31 @@
 .footer-date {
   font-family: 'Nunito-Regular';
   color: #000000;
+}
+
+@media screen and (max-width: 820px) {
+  .footer-date-team {
+    flex: 1 0 100%;
+    text-align: center;
+    padding-top: 30px;
+  }
+
+  .footer-logo {
+    max-width: 100px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer-item {
+    flex: 1 0 100%;
+    text-align: center;
+    padding-top: 30px;
+  }
+
+  .footer-container {
+    justify-content: center;
+  }
+
+  .footer-logo {
+    padding-top: 0px;
+  }
 }
