--- a/src/ui/crossButton.module.css
+++ b/src/ui/crossButton.module.css
@@ -1,28 +1,30 @@
 .crossButtonContainer{
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 15px;
+  right: 15px;
   width: 35px;
   height: 35px;
-  border: none;
-  background-color: none
+  border: 1px solid #548DFF;
+  border-radius: 6px;
+  background-color: transparent;
 }
 .cross,
 .crossButtonLink {
   width: 100%;
   height: 100%
 }
+.cross{
+  color: transparent;
+}
 .crossButtonContainer:hover{
-  transform: scale(1.05);
-  border: 1px solid rgb(250, 137, 137);
-  border-radius: 5px;
+  background-color: #3961b3;
   cursor: pointer;
 }
 .crossButtonContainer:active{
-  transition: all ease-in-out 1s;
-  border: 1px solid rgb(252, 57, 57);
+  transform: scale(0.98);
+  background-color: #548DFF;
   cursor: pointer;
 }
 .crossButtonContainer:active .cross{
-  transform: scale(0.9);
+  transform: scale(0.98);
 } 
