--- a/src/components/game/game-menu/game-menu.module.css
+++ b/src/components/game/game-menu/game-menu.module.css
@@ -1,14 +1,14 @@
 .gameMenuContainer{
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-between;
   align-items: center;
-  width: 75%;
+  width: 500px;
+  max-width: 500px;
   height: 60px;
-  margin-top: 15px;
+  margin: 28px auto 75px auto;
   border-radius: 5px;
-  background-color: rgb(251, 253, 252);
-  -webkit-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
+  background-color: #F5F5F5;
+  /* -webkit-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
   -moz-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
-  box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
+  box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2); */
 }
