--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -31,6 +31,7 @@ margin: 122px auto 46px auto;
   align-items:center;
   width: 300px;
   margin: 0 auto 16px auto;
+  order: 1;
 }
 .sprintGameTimer,
 .sprintGameScore {
@@ -77,7 +78,8 @@ margin: 122px auto 46px auto;
   height: 300px;
   border: 1px solid #0058C9;
   border-radius: 5px;
-  overflow: hidden;
+  /* overflow: hidden; */
+  order: 2;
   /* -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
   -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
   box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2); */
@@ -147,6 +149,7 @@ margin: 122px auto 46px auto;
   font-size: 1.25em;
   font-weight: 600;
   color:#F5F5F5;
+  order: 4;
 }
 .falseButton,
 .truthButton{
@@ -195,17 +198,27 @@ background-color: #C80707;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 100%;
+  max-width: 1280px;
   min-height: 200px;
-  margin:auto;
+  margin: 0 auto;
 }
-.buttonList{
+.gameStatList{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 75%;
+  width: 95%;
+  height: 100%;
+  max-width: 1200px;
   margin: auto;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.gameStatList::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 .gameStatCard{
   display: flex;
@@ -213,19 +226,13 @@ background-color: #C80707;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 45px;
-  margin: 10px 0 15px 0;
-  border-radius: 5px;
+  height: 35px;
+  margin: 10px 0 10px 0;
+  border-bottom: 1px solid #0058C9;
   font-size: 1em;
-  font-weight: 600;
+  font-weight: 400;
   text-align: justify;
-  color: var(--text-color);
-  background-color: rgb(251, 253, 252);
-  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  padding-left: 5px;
-  padding-right: 5px;
+  color: #000000;;
 }
 .messageText{
   display: block;
@@ -235,14 +242,9 @@ background-color: #C80707;
   text-align: center;
   margin: 25px 0 0 0;
   border-radius: 5px;
-  /* border: 2px solid rgba(241, 113, 113, 0.479);*/
-  background-color: rgb(251, 253, 252);
   font-size: 1.25em;
   font-weight: 600;
   color:  rgba(214, 68, 68, 0.507);
-  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
 } 
 .soundImage{
   width:45px;
@@ -267,6 +269,22 @@ object-fit: cover;
   align-items: center;
   flex-wrap: wrap;
   text-align: justify;
+}
+.greenYes,
+.redNo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1em;
+  width:100%;
+  height: 100%;
+  text-transform: uppercase;
+}
+.greenYes{
+  color: #069706;
+}
+.redNo{
+  color: #C80707;
 }
 .checked,
 .position{
