--- a/src/components/header/Login.module.css
+++ b/src/components/header/Login.module.css
@@ -1,76 +1,94 @@
 .login {
-  position: absolute;
-  right: 4rem;
-  top: 1rem;
+  /* position: absolute; */
+  /* right: 4rem; */
+  /* top: 1rem; */
   display: flex;
-  flex-direction: row;
-  gap: 20px;
-  border: 2px solid #2877b4cf;
-  height: 30px;
-  border-radius: 15px;
+  /* flex-direction: row; */
+  /* gap: 20px; */
+  /* border: 2px solid #2877b4cf; */
+  /* height: 30px; */
+  /* border-radius: 15px; */
   align-items: center;
-  padding: 0 10px;
+  margin-left: 40px;
 }
-.login > a {
-  font-family: 'Jost', sans-serif;
-  font-size: 1.2rem;
-  color: #2877b4cf;
-  letter-spacing: 2px;
-  font-weight: 700;
+/* .login > a { */
+/* font-family: 'Jost', sans-serif; */
+/* font-size: 1.2rem; */
+/* color: #2877b4cf; */
+/* letter-spacing: 2px; */
+/* font-weight: 700; */
+/* } */
+
+.userName {
+  font-family: 'Nunito-Bold';
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+  text-transform: capitalize;
+  padding-left: 15px;
+  max-width: 100px;
+  overflow: hidden;
 }
-.name {
-  border: 2px solid transparent;
-  background-color: transparent;
-  border-left: 2px solid #2877b4cf;
-  font-family: 'Jost', sans-serif;
-  text-transform: lowercase;
-  font-size: 1.2rem;
-  color: #2877b4cf;
-  letter-spacing: 2px;
-  font-weight: 700;
-}
+
 .name:first-of-type {
   text-transform: capitalize;
 }
 
-
-.dropdown {
+/* .dropdown {
   position: relative;
   display: inline-block;
-}
-.dropdownContent {
-  display: none;
-  flex-direction: column;
-  transform: translate(-8px, 3.5px);
-  position: absolute;
-  background-color: #f9f9f9;
-  border-radius: 5px;
-  max-height: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
+} */
+
+/* .dropdownContent { */
+/* display: none; */
+/* flex-direction: column; */
+/* transform: translate(-8px, 3.5px); */
+/* position: absolute; */
+/* background-color: #f9f9f9; */
+/* border-radius: 5px; */
+/* max-height: 100px; */
+/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+/* } */
 
 .dropdownContent a {
   color: black;
   text-decoration: none;
   display: block;
 }
+
 .dropbtn {
-  font-family: 'Jost', sans-serif;
   text-transform: lowercase;
   font-size: 1.2rem;
-  color: #2877b4cf;
-  letter-spacing: 2px;
-  font-weight: 700;
   background-color: transparent;
   border: none;
   cursor: pointer;
 }
+/* .dropdownContent a:hover { */
+/* text-decoration: underline; */
+/* border-radius: 3px; */
+/* } */
+/* .dropdownContent a:active { */
+/* box-shadow: 0 .5rem 1rem rgba(0,0,0,.2); */
+/* } */
+/* .dropdownShow {
+      display: flex;
+    } */
+/* .dropdown:hover .dropbtn {color: white;} */
 
-.dropdownContent a:hover {
-  text-decoration: underline;
-  border-radius: 3px;}
-.dropdownContent a:active {
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+.logoutBtn {
+  background: url('./ui-header/Sign_out_icon.png') center;
 }
-.dropdownShow {display: flex;}
-.dropdown:hover .dropbtn {color: white;}
+.loginBtn {
+  display: inline-block;
+  background: url('./ui-header/Sign_in_icon.png') center;
+}
+.logoutBtn,
+.loginBtn {
+  height: 25px;
+  width: 30px;
+  margin-left: 40px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+}
