--- a/src/components/header/Logo.module.css
+++ b/src/components/header/Logo.module.css
@@ -1,23 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@700&display=swap');
-
-a {
-  text-decoration: none;
-  color: black;
-}
-.logoText {
-  display: inline-block;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-size: 4.5rem;
+/* .logoText { */
+  /* display: inline-block; */
+  /* font-family: 'Yanone Kaffeesatz', sans-serif; */
+  /* font-size: 4.5rem; */
   /* background-image: linear-gradient(to top, #003cff, #ffffff, #fe0000); */
-  background-image: url('../../../public/assets/main/FlagUK.png');
-  background-clip: text;
-  color: transparent;
-}
+  /* background-image: url('../../../public/assets/main/FlagUK.png'); */
+  /* background-clip: text; */
+  /* color: transparent; */
+/* } */
 .logoBlock {
-  display: flex; 
+  /* display: flex; 
   margin-left: 100px;
   align-items: center;
   min-width: 240px;
   border-radius: 100%;
-  filter: drop-shadow(2px 4px 6px black);
+  filter: drop-shadow(2px 4px 6px black); */
+  flex: 1 0;
+  font-family: 'Nunito-Bold';
+  font-size: 24px;
+  line-height: 33px;
+}
+
+.logoBlock a {
+  color: #ffffff;
+}
+.active {
+  border: 2px solid red;
 }
