--- a/src/components/header/Navigation.module.css
+++ b/src/components/header/Navigation.module.css
@@ -15,7 +15,7 @@
   color: #d8d8d8cf;
 }
 .menuList > *,
-.menuList > *:link,
+/* .menuList > *:link, */
 .menuList > *:visited {
   display: inline-block;
   border-radius: 5px;
@@ -38,7 +38,7 @@
   bottom: 0;
   left: 0;
   background-color: #ffffff;
-  transition: all 0.3 ease;
+  transition: width 0.3s ease;
 }
 .navLink:hover::before {
   width: 100%;
