--- a/src/components/auth/Auth.module.css
+++ b/src/components/auth/Auth.module.css
@@ -1,15 +1,9 @@
 .wrapper,
 .wrapper_msg {
   margin: auto;
-  background-color: var(--main-color);
-
-  padding: 10px 15px 25px;
   text-align: center;
   width: 290px;
   overflow: hidden;
-  border-radius: 14px;
-  box-shadow: #00b637;
-  box-shadow: 5px 7px 17px 0px blue;
   z-index: 3;
 }
 
@@ -28,11 +22,23 @@
 }
 
 .title {
+  font-family: 'Nunito-Bold';
+  font-size: 22px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
   margin-bottom: 20px;
+  text-transform: uppercase;
+  color: var(--border-color);
 }
 
-.signup {
-  width: inherit;
+.form-group label {
+
+}
+
+.signup,
+.signin {
+  /* width: inherit; */
+  text-align: initial;
 }
 
 .signup input {
@@ -91,7 +97,5 @@ p {
 
 .confirm_btn {
   max-width: 290px;
-  margin: 15px auto
+  margin: 15px auto;
 }
-
-
