fix: fix newWords +1 issue, add no stats view, add Nunito bold to styling

--- a/src/pages/Stats.module.css
+++ b/src/pages/Stats.module.css
@@ -71,12 +71,11 @@ tbody tr {
   gap: 0.4vw;
 }
 .date {
-  font-weight: 700;
+  font-family: 'Nunito-Bold';
   font-size: 0.9rem;
 }
 .legend {
-  font-weight: 700;
-  font-size: 0.9rem;
+  font-family: 'Nunito-Bold';
 }
 .chartLegend {
   width: 20%;
@@ -84,16 +83,5 @@ tbody tr {
 }
 .title {
   text-align: justify;
-}
-
-.popupInfo:hover::after { 
-  content: attr(data-title);
-  position: absolute; 
-  left: 20%; top: 30%; 
-  z-index: 1; 
-  background: rgba(255,255,230,0.9); 
-  font-family: Arial, sans-serif;
-  font-size: 11px; 
-  padding: 5px 10px; 
-  border: 1px solid #333;
+  font-family: 'Nunito-Bold';
 }
