feat: add other styles

--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -292,6 +292,10 @@ object-fit: cover;
 }
 .audio{
   width:15%;
+  height: 47px;
+}
+.audio:hover{
+  cursor: pointer;
 }
 .transcription{
   width: 20%;
