--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,6 +2,10 @@
   background-color: var(--color-bg);
 }
 
+.footer.hide {
+  display: none;
+}
+
 .footer-container {
   font-family: 'Nunito-Light';
   font-size: 14px;
