feat: add statistics layout, fix header shift, add audio-icon in stats

--- a/src/components/game/audio-game/Audiogame.module.css
+++ b/src/components/game/audio-game/Audiogame.module.css
@@ -186,4 +186,10 @@
 
 .playIcon {
   fill: #ffffff;
+  height: 25px;
+  transition: all 0.4s ease;
+}
+
+.playIcon:hover {
+   transform: rotateZ(-10deg);
 }
