--- a/src/components/game/audio-game/game-stat/StatsCard.module.css
+++ b/src/components/game/audio-game/game-stat/StatsCard.module.css
@@ -1,72 +1,3 @@
-/* .printChallengePage {
-  position: relative;
-  background-color: aliceblue;
-} */
-/* .sprintGameFieldWherePlaying {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 550px;
-  max-width: 500px;
-  height: 550px;
-  max-height: 500px;
-  border-radius: 5px;
-  margin: auto;
-  overflow: hidden;
-  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-} */
-/* .sprintGameFieldWherePlayingBackground {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
-/* .gameInfo {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-  width: 60%;
-  max-width: 600px;
-  margin: 0 auto;
-} */
-/* .engWordField,
-.translateEngWordField,
-.sprintButtonBlock {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 50px;
-  border-radius: 5px;
-  margin: 25px 0 15px 0;
-  font-size: 2em;
-  font-weight: 600;
-  color: beige;
-}
-.sprintButtonBlock {
-  width: 80%;
-  justify-content: space-around;
-}
-.falseButton,
-.truthButton {
-  width: 150px;
-  height: 45px;
-  border: none;
-  border-radius: 5px;
-  background-color: inherit;
-  background-color: rgba(71, 70, 70, 0.534);
-  font-size: 0.75em;
-  font-weight: 600;
-  color: beige;
-  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-} */
-
 .buttonList {
   display: flex;
   flex-direction: column;
@@ -77,23 +8,11 @@
 }
 .gameStatCard {
   display: flex;
-  /* flex-direction: row; */
   justify-content: center;
   align-items: center;
-  /* width: 100%; */
-  height: 45px;
-  margin: 10px 0 15px 0;
-  border-radius: 5px;
-  /* font-size: 1em; */
-  font-weight: 600;
-  text-align: justify;
-  color: var(--text-color);
-  background-color: rgb(251, 253, 252);
-  -webkit-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  -moz-box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  box-shadow: 0px -2px 39px 8px rgba(246, 229, 206, 0.2);
-  /* padding-left: 5px; */
-  /* padding-right: 5px; */
+  height: 40px;
+  margin: 10px 0 10px 0;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .gameStatCard button {
@@ -148,4 +67,26 @@
 }
 .translate {
   width: 30%;
+}
+
+.greenYes,
+.redNo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1em;
+  width: 100%;
+  height: 100%;
+  text-transform: uppercase;
+}
+.greenYes {
+  color: var(--color-right);
+}
+.redNo {
+  color: var(--color-false);
+}
+
+.soundImage {
+  font-size: 0px;
+  cursor: pointer;
 }
