--- a/src/components/game/audio-game/game-stat/StatsMenu.module.css
+++ b/src/components/game/audio-game/game-stat/StatsMenu.module.css
@@ -1,13 +1,16 @@
 .wrapper {
   display: flex;
-  /* flex-direction: column; */
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  /* height: 60px; */
-  padding: 10px 20px;
-  border-radius: 5px;
-  background-color: rgb(251, 253, 252);
-  -webkit-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
-  -moz-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
-  box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
+  width: 500px;
+  max-width: 500px;
+  height: 60px;
+  margin: 28px auto 75px auto;
 }
+
+.soundImage {
+  font-size: 0px;
+}
+
+/* .statsList {
+} */
