--- a/src/components/game/game-menu/game-menu.module.css
+++ b/src/components/game/game-menu/game-menu.module.css
@@ -6,8 +6,7 @@
   max-width: 500px;
   height: 60px;
   margin: 28px auto 75px auto;
-  border-radius: 5px;
-  background-color: #F5F5F5;
+  /* border-radius: 5px; */
   /* -webkit-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
   -moz-box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2);
   box-shadow: 0px 2px 10px 2px rgba(185, 191, 195, 0.2); */
