--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -1,15 +1,15 @@
 .printChallengePage{
   position: relative;
-  width: 100vw;
-  height:1080px;
-  background-color: #F5F5F5;
+  /* width: 100vw; */
+  /* height:1080px; */
+  /* background-color: #F5F5F5; */
 }
 .printChallengePageContainer{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 100%;
+  /* width: 100%; */
   max-width: 1280px;
   height: 100%;
   margin: 0 auto;
