feat: add searchBlock into dictionary

--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -1,7 +1,8 @@
 .printChallengePage{
   position: relative;
   width: 100vw;
-  height:1080px;
+  /* height:1080px; */
+  height: 100vh;
   background-color: #F5F5F5;
 }
 .printChallengePageContainer{
