--- a/src/components/members-card/mebersCard.css
+++ b/src/components/members-card/mebersCard.css
@@ -1,6 +1,7 @@
 .about-page{
   width: 100vw;
-  height: 1080px;
+  /* height: 1080px; */
+  height: 100vh;
   background-color: #F5F5F5;;
 }
 .about-page-container{
