feat: add styles for next btn & refresh buttons disable

--- a/src/components/game/audio-game/Audiogame.module.css
+++ b/src/components/game/audio-game/Audiogame.module.css
@@ -139,7 +139,7 @@
 }
 
 .answerWrong {
-  background-color: rgb(255, 71, 47);
+  background-color: var(--color-false);
   color: #ffffff;
 }
 
@@ -192,4 +192,8 @@
 
 .playIcon:hover {
    transform: rotateZ(-10deg);
+}
+
+.answerBtn.changeBtn {
+  background-color: var(--color-false);
 }
