--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --border-color: rgb(0, 88, 201);
   --color-bg: rgba(248, 249, 252, 1);
   --color-right: rgba(6, 151, 6, 1);
-  --color-false: rgb(200, 7, 7);
+  --color-false: rgb(138, 4, 4, 1);
   /* 200: 'Nunito-ExtraLight'; */
   /* 300: 'Nunito-Light'; */
   /* 400: 'Nunito-Regular'; */
