feat: add game from keyboard, change style last answer btn

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   --tetriary-color: rgb(122, 79, 125);
   --border-color: rgb(0, 88, 201);
   --color-bg: rgba(248, 249, 252, 1);
-  --color-right: rgba(6, 151, 6, 1);
-  --color-false: rgb(138, 4, 4, 1);
+  --color-right: rgb(6, 151, 6, 1);
+  --color-false: rgb(200, 7, 7, 1);
   /* 200: 'Nunito-ExtraLight'; */
   /* 300: 'Nunito-Light'; */
   /* 400: 'Nunito-Regular'; */
