--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -67,7 +67,7 @@ margin: 122px auto 46px auto;
   font-weight: 300;
   line-height: 10px;
   letter-spacing: 0.1em;
-  color: #069706;;
+  color: #069706;
 }
 .sprintGameFieldWherePlaying {
   position: relative;
